--- a/Tanks/BLForGaming/BLClassesForGame.csproj
+++ b/Tanks/BLForGaming/BLClassesForGame.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cartridges.cs" />
     <Compile Include="Obstacles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
