--- a/Tanks/BLForGaming/BLClassesForGame.csproj
+++ b/Tanks/BLForGaming/BLClassesForGame.csproj
@@ -41,9 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cartridges.cs" />
-    <Compile Include="Obstacles.cs" />
+    <Compile Include="Artifact.cs" />
+    <Compile Include="Cartridge.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GameField.cs" />
+    <Compile Include="Obstacle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tank.cs" />
+    <Compile Include="TypeOfCartridges.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLForTankGaming\BLForInterfaces.csproj">
