--- a/Tanks/BLForTankGaming/BLForTankGame.csproj
+++ b/Tanks/BLForTankGaming/BLForTankGame.csproj
@@ -41,10 +41,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuilderForTank\AttackTankBuilder.cs" />
+    <Compile Include="BuilderForTank\Builder.cs" />
+    <Compile Include="BuilderForTank\BuilderForPlayerTank.cs" />
+    <Compile Include="BuilderForTank\DefenseTankBuilder.cs" />
+    <Compile Include="BuilderForTank\Director.cs" />
     <Compile Include="Classes\Artifact.cs" />
-    <Compile Include="Classes\AttackStrategy.cs" />
+    <Compile Include="IteratorForTank\Aggregate.cs" />
+    <Compile Include="IteratorForTank\ConcreteAggregate.cs" />
+    <Compile Include="IteratorForTank\ConcreteIterator.cs" />
+    <Compile Include="IteratorForTank\Iterator.cs" />
+    <Compile Include="ObserverForGame\IObservable.cs" />
+    <Compile Include="ObserverForGame\IObserver.cs" />
+    <Compile Include="StateForTank\StateAlive.cs" />
+    <Compile Include="StateForTank\StateBurn.cs" />
+    <Compile Include="StateForTank\StateOfTank.cs" />
+    <Compile Include="StrategyForTank\AttackStrategy.cs" />
     <Compile Include="Classes\Cartridge.cs" />
-    <Compile Include="Classes\DefenseStrategy.cs" />
+    <Compile Include="StrategyForTank\DefenseStrategy.cs" />
     <Compile Include="Classes\Game.cs" />
     <Compile Include="Classes\GameField.cs" />
     <Compile Include="Interfaces\IArtifactsOnField.cs" />
@@ -53,12 +67,14 @@
     <Compile Include="Interfaces\IGameField.cs" />
     <Compile Include="Interfaces\IObjectsOnField.cs" />
     <Compile Include="Interfaces\IObstaclesOnField.cs" />
-    <Compile Include="Interfaces\IStrategy.cs" />
+    <Compile Include="StrategyForTank\IStrategy.cs" />
     <Compile Include="Interfaces\ITanks.cs" />
     <Compile Include="Classes\Obstacle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Tank.cs" />
     <Compile Include="Classes\TypeOfCartridges.cs" />
+    <Compile Include="StrategyForTank\StrategyForPlayer.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
